--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <em class="error-message">Email Address cannot be empty</em>
           </div>
           <div class="input-group">
-            <label class="label" for="Password">
+            <label class="label" for=password">
               <input
                 type="password"
                 name="password"
