password label fix

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <em class="error-message">Email Address cannot be empty</em>
           </div>
           <div class="input-group">
-            <label class="label" for=password">
+            <label class="label" for="pass">
               <input
                 type="password"
                 name="password"
-                id="password"
+                id="pass"
                 placeholder="Password"
               />
               <img src="./images/icon-error.svg" class="error-icon" alt="" />
